# route_duration_prediction

./: .gitginore  LICENSE  README.md  main.py  pyproject.toml
data/input/: training_routes.csv
data/output/: predictions.npy
models/: kmeans_model.sav  xgboost_model.sav
notebooks/: task.ipynb
src/: logging_config.py  modelling.py  plotting.py  processing.py
