[tool.poetry]
name = "route-duration-prediction"
version = "0.1.0"
description = "Predicting time required to complete a route using machine learning approach"
authors = ["ghazwan namou jablak <ghazwan.namou_jablak@syngenta.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.2"
geopy = "^2.4.1"
plotly = "^6.3.0"
nbformat = "^5.10.4"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
scikit-learn = "^1.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
